tests/ui/annotation_is_wong.stderr
error: Not a dbstruct wrapper annotation (try DefaultTrait or DefaultValue)
 --> tests/ui/annotation_is_wong.rs:5:16
  |
5 |     #[dbstruct(NotAnnotation)]
  |                ^^^^^^^^^^^^^
